deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pendingapi
  namespace: bte
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pendingapi
  template:
    metadata:
      labels:
        app: pendingapi
      annotations:
        configHash: CONFIG_HASH_VALUE
    spec:
      containers:
        - name: pendingapiserver
          image: 853771734544.dkr.ecr.us-east-1.amazonaws.com/translator-bte-pending-api:DOCKER_VERSION_VALUE
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
