deploy/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pendingapi
  namespace: bte
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: pendingapi
  type: NodePort
